<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:src="@drawable/hello"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">

    </ImageView>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp"
        android:orientation="vertical">

        <EditText
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            >

        </EditText>
        <EditText
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name">

        </EditText>
        <EditText
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress">

        </EditText>
        <EditText
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword">

        </EditText>
        <CheckBox
            android:layout_marginTop="50dp"
            android:paddingHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conditions"
            android:textStyle="italic"
            android:textColor="@color/moradito">

        </CheckBox>
        <Button
            android:id="@+id/buttonh"
            android:layout_marginTop="30dp"
            android:layout_width="219dp"
            android:layout_height="33dp"
            android:background="@drawable/round_button"

            android:layout_gravity="center"
            android:text="@string/sing_in"
            android:textColor="@color/blanquito"
            android:textStyle="italic">

        </Button>
    </LinearLayout>
</LinearLayout>