<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scaleType="centerCrop"
        android:src = "@drawable/the_cheezery"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/moradito"
        >


        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:fontFamily="@string/ligth"
            android:textColor="@color/blanquito"
            android:textSize="@dimen/titleSize"
            android:textAlignment="center">

        </TextView>

        <TextView
            android:layout_marginTop="5dp"
            android:paddingHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:fontFamily="@string/ligth"
            android:textColor="@color/blanquito"
            android:textSize="@dimen/regText"
            android:textAlignment="center"
            android:textStyle="italic">

        </TextView>

        <Button
            android:id="@+id/buttonp"
            android:layout_marginTop="20dp"
            android:layout_width="219dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:text="@string/get_started"
            android:textColor="@color/blanquito"
            android:textAlignment="center"
            android:textStyle="italic">

        </Button>

        </LinearLayout>


</LinearLayout>